fixed some layout issues added some more images

--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,69 @@
+html {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  background-color: black;
+}
+
 header {
-  text-align: canter;
-  font-family: "Brush Script MT", "Lucida Sans", "Lucida Sans Regular",
-    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  align-self: center;
+  justify-content: center;
   background-color: black;
   color: aliceblue;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 50px;
+  font-family: "Brush Script MT", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+#company-name,
+.logo {
+  margin-left: 10px;
+  top: 0;
+  padding: 2px 2px 2px 2px;
 }
 
 .nav-bar {
-  font-size: 1.75rem;
-  display: inline;
+  font-size: 1.5rem;
+  align-items: end;
+  align-self: auto;
+
+  margin-left: 600px;
 }
 
 .nav-link {
-  diplay: flex-box;
   color: aliceblue;
-  text-align: right;
-  margin-block-end: auto;
+  text-decoration: none;
 }
+
 .nav-link:hover {
   color: blue;
   cursor: pointer;
 }
 
-main {
+body {
   background-image: url(https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/595538045_25233534866284998_3951784622074485230_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=Jdt7qBeXQ0sQ7kNvwGOy2cH&_nc_oc=AdnOgXzcPl8-3_1Y0MJ0AiviOxj-SvKle5-NHl1Y2bizeQw6PAj6WPZcdGE9jp_qT8c&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&_nc_gid=-TcJ6A4t1VIqXZZWa7e-gg&oh=00_AfniQ0I12D7jcea7TGlcNKMu9Bi_Unp1HKcnGvYNHaDOtA&oe=693A89D3);
   background-repeat: no-repeat; /*no tiling*/
   background-size: cover;
   background-position: center;
+  width: 100%;
+}
+
+hero {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 400px;
+}
+
+#email,
+input {
+  box-sizing: border-box;
+  align-self: center;
 }
